# src/infrastructure/postgres/repositories/productRepository.js
@@ -1,48 +1,44 @@
-import { ProductModel } from '../models/index.js';
-import { Op } from 'sequelize';
-import Product from '../../../domain/retail/entities/Product.js';
+import { ProductModel } from '../models/index.js'
+import { Op } from 'sequelize'
+import Product from '../../../domain/retail/entities/Product.js'
 
 export const productRepository = {
-  async findBy(keyword, type) {
-    if (type === 'id') {
-      const id = parseInt(keyword, 10);
-      if (isNaN(id)) throw new Error('ID invalide.');
-      return await this.findById(id);  // Renvoie un tableau ou []
-    }
+	async findBy(keyword, type) {
+		if (type === 'id') {
+			const id = parseInt(keyword, 10)
+			if (isNaN(id)) throw new Error('ID invalide.')
+			return await this.findById(id) // Renvoie un tableau ou []
+		}
 
-    const clause = type === 'nom'
-      ? { name: { [Op.iLike]: `%${keyword}%` } }
-      : { category: { [Op.iLike]: `%${keyword}%` } };
+		const clause =
+			type === 'nom'
+				? { name: { [Op.iLike]: `%${keyword}%` } }
+				: { category: { [Op.iLike]: `%${keyword}%` } }
 
-    const rows = await ProductModel.findAll({ where: clause });
-    return rows.map(row => new Product(row.dataValues));
-  },
+		const rows = await ProductModel.findAll({ where: clause })
+		return rows.map((row) => new Product(row.dataValues))
+	},
 
-  async getAll() {
-    const rows = await ProductModel.findAll({
-      order: [['id', 'ASC']]
-    });
-    return rows.map(row => new Product(row.dataValues));
-  },
+	async getAll() {
+		const rows = await ProductModel.findAll({
+			order: [['id', 'ASC']],
+		})
+		return rows.map((row) => new Product(row.dataValues))
+	},
 
-  async findById(id) {
-    const row = await ProductModel.findByPk(id);
-    return row ? [new Product(row.dataValues)] : [];
-  },
+	async findById(id) {
+		const row = await ProductModel.findByPk(id)
+		return row ? new Product(row.dataValues) : null
+	},
 
-  async update(product) {
-    await ProductModel.update(
-      {
-        name: product.name,
-        category: product.category,
-        price: product.price,
-        stock: product.stock
-      },
-      { where: { id: product.id } }
-    );
-  },
-
-  async updateStock(productId, newStock) {
-    await ProductModel.update({ stock: newStock }, { where: { id: productId } });
-  }
-};
+	async update(product) {
+		await ProductModel.update(
+			{
+				name: product.name,
+				category: product.category,
+				price: product.price,
+			},
+			{ where: { id: product.id } }
+		)
+	},
+}
